# Enhancing-Pepper-Robot-s-HRI

./: FOV_dataset.py  FOV_realsense.py  README.md
bodypose_ros_msgs/: CMakeLists.txt  package.xml
bodypose_ros_msgs/msg/: BodyJoint_2D.msg  PersonDetection.msg  PersonDetectionArray.msg  PersonPoseFov.msg  PersonPoseFovArray.msg
fov_online/: CMakeLists.txt  package.xml
fov_online/config/: camera_params.yaml
fov_online/launch/: fov_online.launch
fov_online/scripts/: FOV_online.py
people_det_3d/: CMakeLists.txt  package.xml  setup.py
people_det_3d/launch/: fov_online.launch
people_det_3d/scripts/: main.py  yolo_pose.py
people_det_3d/src/people_det_3d/: FOV_realsense.py  download_dataset.py  fov_realsense.py  kalman.py  utils.py
people_det_msgs/: CMakeLists.txt  package.xml
people_det_msgs/msg/: HumanBodyJoints.msg  HumanBodyJointsArray.msg  HumanDetectionFov.msg  HumanDetectionFovArray.msg
src/: FOV_realsense.py  download_dataset.py
