<?xml version="1.0"?>
<package>
  <name>person_detection_msgs</name>
  <version>0.0.1</version>
  <description>The person_detection_msgs package</description>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>sensor_msgs</build_depend>  

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>  
  <run_depend>sensor_msgs</run_depend>  

</package>
