<?xml version="1.0"?>
<package format="2">
  <name>people_det_3d</name>
  <version>0.0.1</version>
  <description>People detection, localization and tracking in 3D</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="paolomagribrescia@gmail.com">Paolo Magri</maintainer>
  <maintainer email="amiryan.j@gmail.com">Javad Amirian</maintainer>

  <license>BSD</license>

   <url>https://github.com/isir-socialrobotics/people_det_3d</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
