<?xml version="1.0"?>
<package>
  <name>people_det_msgs</name>
  <version>0.0.1</version>
  <description>Messages for person detection and fov</description>

  <maintainer email="amiryan.j@gmail.com">Javad Amirian</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>  
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
